# skills-gap-analyzer

./: .gitignore  CHANGES_SUMMARY.md  CLUSTERING_IMPROVEMENTS.md  CODE_EXAMPLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LEARNING_PATH_INTEGRATION.md  LEARNING_PATH_INTEGRATION_EXAMPLE.py  LEARNING_PATH_SUMMARY.md  LICENSE  NOTEBOOK_ANALYSIS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_REFERENCE.py  QUICK_START.md  README.md  README_CLUSTERING.md  README_LEARNING_PATH.md  RESTRUCTURING_COMPLETE.md  STATUS_CHECKLIST.md  UI_IMPROVEMENTS_SUMMARY.md  UPDATED_NOTEBOOKS_GUIDE.md  VISUAL_DIAGRAMS.md  WHAT_WAS_DELIVERED.md  __init__.py  app.py  pyproject.toml  requirements.txt  temp_main_original.py  test_gap_analysis.py  test_improved_clustering.py  test_learning_path_integration.py  test_llm_extraction.py  test_path_generation.py  test_production_ready.py  test_simple.py
.streamlit/: config.toml
app/: main.py  main_backup.py
app/components/: __init__.py  gap_analysis_tab.py  gap_section.py  hero.py  learning_path_section.py  learning_path_tab.py  profile_section.py  recommendations_section.py  sidebar.py  similar_opportunities_section.py  skills_tab.py
app/models/: clustering_model.pkl
components/: __init__.py  associations_tab.py  header.py
config/: __init__.py  constants.py  settings.py
data/: __init__.py  sample_data.py
data/processed/: association_rules_categories.csv  association_rules_skills.csv  job_skill_mapping.csv  skills_enriched.csv
job_project/: notebook.ipynb
notebooks/: 00_data_exploration.ipynb  01_data_cleaning.ipynb  02_association_rules.ipynb  03_clustering.ipynb  03_clustering_v2_improved.ipynb  04_model_evaluation.ipynb  05_skills_gap_analyzer_demo.ipynb
scripts/: build_job_clusters_minimal.py  build_job_clusters_small.py  check_models_quiet.py  download_models.py  prepare_minimal_data.py  sanity_check_models.py  show_learning_roadmap.py  test_association_recommender.py  test_association_recs.py
src/data/: __init__.py  job_skill_extractor.py  loader.py  mapper.py  skill_metadata.py
src/models/: __init__.py  association_miner.py  cluster_analyzer.py  gap_analyzer.py  learning_path_generator.py  ml_enhancements.py  model_validator.py  personalized_path.py  skill_extractor.py  skill_matcher.py
src/utils/: cluster_analyzer.py  data_loader.py  secrets.py  skill_filter.py
tests/: test_app.py  test_data_processing.py
utils/: styling.py
